SERVER-12125 require fetch on $elemMatch value expressions